# lazy-torrent

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  pyproject.toml
src/: bencoding.py  client.py  connection.py  display.py  main.py  protocol.py  torrent.py  tracker.py
src/display/: display.py
src/meta_file/: bencoding.py  meta_file.py
src/migrations/: env.py
src/migrations/versions/: 0af2f93f1f43_create_torrents_table.py  8e97ddf88c55_change_info_column_type.py  b90fa40e5314_init_torrents_table.py
src/storage/: __init__.py  models.py  repository.py
tests/: conftest.py  test_bencoding.py  test_tracker.py
