[tool.poetry]
name = "ptorrent"
version = "0.1.0"
description = ""
authors = ["Anatoliy Platonov <p4m.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^11.2"
pytest = "^7.0"
click = "^8.0"
httpx = "^0.23"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1"
isort = "^5.10"
pre-commit = "^2.9.3"
flake8 = "^4.0"
pytest-cov = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
