[tool.poetry]
name = "ptorrent"
version = "0.1.0"
description = ""
authors = ["Anatoliy Platonov <platonoff.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5"
pytest = "^7.0"
click = "^8.0"
httpx = "^0.23"
pytest-asyncio = "^0.19"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
black = "^22.6"
isort = "^5.10"
pre-commit = "^2.20"
flake8 = "^4.0"
pytest-cov = "^3.0"
respx = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
